# postgate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.multi  README.md
.github/workflows/: docker.yml
.sqlx/: query-4037e01c8e73fcc72627842f5d0ac48bc2559bb2eb7e5ef8ce572895c6ea74e2.json  query-41931f879395a1a70ac178a9bc47cafdf2c36a6587727398baf9da135b9ff259.json  query-56e3e00af2180d2ce2fab0b1366768aa25be5924fa0cfad67826a917dd7cbfc1.json  query-7547c8581ebfdeb5fd716f53d4deb6cea5d0d1960637855bc5b8bb0bd045c425.json  query-7b853288f5b2b562aa24eba15521c8a5d2fc310cd998d445bd58d4d496b66831.json  query-8b11f5afbd3a2713aae1297ee1c72a612ddb20996669c2d779f9e544a8bb04c8.json  query-8e96470b33f646c3d3be17683e02ba08efb6d778be4a6551bf59384e7b7d68ff.json  query-a6c66c0d82f0fe90a2f6170b4a9a05626f0788c6ef02badb00d70ea508c60063.json  query-cac039e9ced4e7f77147e9929bc2a1f75214c0edfe3fa559aec910ac643b0a02.json  query-e25d0150c6190375264158c676723ca46a400b5cdbdb312e26dfcd5ce517a833.json  query-e6f1409d2dfd6c3bf3472c9e83f09737c162b13f80c96e3636dce75698740856.json  query-ee357036307eaa116194fb5186a09a6eb90d93af1cbfbebab20c776ef191c0a7.json  query-f83a6f42b125e01f1a1c1a87c69c2ebf1c16af1f38b634ccd70d24d11876ae27.json
migrations/: 001_create_postgate_databases.sql  001_init.sql  002_helper_functions.sql  002_tenant_functions.sql
src/: auth.rs  config.rs  error.rs  executor.rs  lib.rs  main.rs  parser.rs  server.rs  store.rs  token.rs
tests/: integration.rs
