[package]
name = "postgate"
version = "0.1.0"
edition = "2024"
default-run = "postgate"
description = "Secure HTTP proxy for PostgreSQL with SQL validation and multi-tenant support"
license = "MIT"
repository = "https://github.com/openworkers/postgate"
keywords = ["postgresql", "proxy", "http", "sql", "serverless"]
categories = ["database", "web-programming"]

[dependencies]
# Web server
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid", "migrate"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# SQL parsing
sqlparser = { version = "0.59.0", features = ["visitor"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Token hashing
sha2 = "0.10"
rand = "0.9.2"
hex = "0.4"

# Logging
log = "0.4.28"
env_logger = "0.11.8"

# Config
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
actix-http = "3"
