[package]
name = "postgate"
version = "0.1.3"
edition = "2024"
default-run = "postgate"
description = "Secure HTTP proxy for PostgreSQL with SQL validation and multi-tenant support"
license = "MIT"
repository = "https://github.com/openworkers/postgate"
keywords = ["postgresql", "proxy", "http", "sql", "serverless"]
categories = ["database", "web-programming"]

[features]
default = ["server", "migrations"]
server = ["dep:actix-web", "dep:actix-rt", "dep:clap", "dep:dotenvy", "dep:env_logger"]
migrations = []

[dependencies]
# Web server (optional - only for server feature)
actix-web = { version = "4", optional = true }
actix-rt = { version = "2", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid", "migrate"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# SQL parsing
sqlparser = { version = "0.60.0", features = ["visitor"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.148"

# Error handling
thiserror = "2"

# Token hashing
sha2 = "0.10"
rand = "0.9.2"
hex = "0.4"

# Logging
log = "0.4.29"
env_logger = { version = "0.11.8", optional = true }

# Config (optional - only for server feature)
dotenvy = { version = "0.15", optional = true }

# CLI (optional - only for server feature)
clap = { version = "4", features = ["derive", "env"], optional = true }

[[bin]]
name = "postgate"
path = "src/main.rs"
required-features = ["server"]

[dev-dependencies]
actix-http = "3"
